--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@theme{
+  
+}
+
 /* Add these styles for Electron window dragging */
 .app-region-drag {
   -webkit-app-region: drag;
